deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portfolio
  labels:
    app: my-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-portfolio
  template:
    metadata:
      labels:
        app: my-portfolio
    spec:
      containers:
      - name: portfolio
        image: hemantsw/portfolio
---
apiVersion: v1
kind: Service
metadata:
  name: my-portfolio-service
spec:
  type: NodePort
  selector:
    app: my-portfolio 
  ports:
    - name: my-portfolio
      port: 80
      targetPort: 80
