service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-portfolio-service
spec:
  type: NodePort
  selector:
    app: my-portfolio 
  ports:
    - name: my-portfolio
      port: 80
      targetPort: 80
