ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-portfolio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hemantsw.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-portfolio-service
                port:
                  number: 80
